--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>HTML &amp CSS <span class="color-heading pull-right">72%</span></h5>
+                            <h5>HTML &amp; CSS <span class="color-heading pull-right">72%</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="72"></div>
                             </div>
@@ -174,7 +174,7 @@
                                             <i class="service-icon icon-graduation"></i>
                                         </div>
                                         <div class="service-info">
-                                            <h3>B.E &amp ECE</h3>
+                                            <h3>B.E &amp; ECE</h3>
                                             <p class="margin-b-5">Super hero who has dream to compete in this racy world and to achieve something bigger than ever.</p>
                                         </div>
                                         <a href="#" class="content-wrapper-link"></a>    
@@ -383,7 +383,7 @@
                         <div class="col-sm-8 col-sm-offset-1">
                             <div class="row">
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
-                                    <h5>Location</h5>
+                                    <h5><i class="icon-location-pin"></i>Location</h5>
                                     <a href="https://www.google.co.in/maps/@12.9581056,80.2432024,16z" target="_blank">Chennai, India</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
