--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
                         <div class="col-sm-8 col-sm-offset-1">
                             <div class="row">
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
-                                    <h5><i class="icon-location-pin"></i>Location</h5>
-                                    <a href="https://www.google.co.in/maps/@12.9581056,80.2432024,16z" target="_blank">Chennai, India</a>
+                                    <h5>Location</h5>
+                                    <a href="https://www.google.co.in/maps/@12.9581056,80.2432024,16z" target="_blank"><i class="icon-location-pin"></i> Chennai, India</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Phone</h5>
