--- a/index.html
+++ b/index.html
@@ -388,15 +388,15 @@
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Phone</h5>
-                                    <a href="#">+91 850 823 8711</a>
+                                    <a href="#"><i class="icon-phone"></i> +91 850 823 8711</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Email</h5>
-                                    <a href="mailto:#">saracmmce@gmail.com</a>
+                                    <a href="mailto:#"><i class="icon-social-google"></i> saracmmce@gmail.com</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Web</h5>
-                                    <a href="https://saravanan-cm.github.io" target="_blank">saravanan-cm.github.io</a>
+                                    <a href="https://saravanan-cm.github.io" target="_blank"><i class="icon-social-github"></i> saravanan-cm.github.io</a>
                                 </div>
                             </div>
                         </div>
