--- a/index.html
+++ b/index.html
@@ -383,20 +383,20 @@
                         <div class="col-sm-8 col-sm-offset-1">
                             <div class="row">
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
-                                    <h5>Location</h5>
-                                    <a href="https://www.google.co.in/maps/@12.9581056,80.2432024,16z" target="_blank"><i class="icon-location-pin"></i> Chennai, India</a>
+                                    <h5><i class="icon-location-pin"></i> Location</h5>
+                                    <a href="https://www.google.co.in/maps/@12.9581056,80.2432024,16z" target="_blank">Chennai, India</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
-                                    <h5>Phone</h5>
-                                    <a href="#"><i class="icon-phone"></i> +91 850 823 8711</a>
+                                    <h5><i class="icon-phone"></i> Phone</h5>
+                                    <a href="#">+91 850 823 8711</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
-                                    <h5>Email</h5>
-                                    <a href="mailto:#"><i class="icon-social-google"></i> saracmmce@gmail.com</a>
+                                    <h5><i class="icon-envelope"></i> Email</h5>
+                                    <a href="mailto:#">saracmmce@gmail.com</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
-                                    <h5>Web</h5>
-                                    <a href="https://saravanan-cm.github.io" target="_blank"><i class="icon-social-github"></i> saravanan-cm.github.io</a>
+                                    <h5><i class="icon-social-github"></i> Web</h5>
+                                    <a href="https://saravanan-cm.github.io" target="_blank">saravanan-cm.github.io</a>
                                 </div>
                             </div>
                         </div>
