--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                         <div class="col-sm-3 sm-margin-b-30">
                             <div class="text-right sm-text-left">
                                 <h2 class="margin-b-0">Contacts</h2>
-                                <p>Hire me.</p>
+                                <p><a href="https://drive.google.com/open?id=0B-2VjW_WtnSma2UwWDFEU2tyZFk" target="_blank">Hire me.</a></p>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-1">
