footer styles changed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link href="https://saravanan-cm.github.io/layout.min.css" rel="stylesheet" type="text/css"/>
 
         <!-- Favicon -->
-        <link rel="shortcut icon" href="favicon.ico"/>
+        <link rel="icon" href="cmslogo.png" type="image/png"/>
     </head>
     <!-- END HEAD -->
 
@@ -83,7 +83,7 @@
                             <li><a href="https://www.facebook.com/saravanan.cm.14" class="social-icons" target="_blank"><i class="icon-social-facebook"></i></a></li>
                             <li><a href="https://twitter.com/karthik_1495" class="social-icons" target="_blank"><i class="icon-social-twitter"></i></a></li>
                             <li><a href="https://github.com/saravananzarget" class="social-icons" target="_blank"><i class="icon-social-github"></i></a></li>
-                            <li><a href="https://www.instagram.com/d_boy_has_no.name/" class="social-icons" target="_blank"><i class="icon-social-instagram"></i></a></li>
+                            <li><a href="https://www.instagram.com/saravanan_cm/" class="social-icons" target="_blank"><i class="icon-social-instagram"></i></a></li>
                             <li><a href="https://www.linkedin.com/in/saravanan-c-m-b7aa51105/" class="social-icons" target="_blank"><i class="icon-social-linkedin"></i></a></li>
                         </ul>
                     </div>
@@ -112,13 +112,13 @@
 
                         <!-- Progress Box -->
                         <div class="progress-box">
-                            <h5>JavaScript <span class="color-heading pull-right">84%</span></h5>
+                            <h5>JavaScript <span class="color-heading pull-right">92%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="84"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="92"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>Java <span class="color-heading pull-right">91%</span></h5>
+                            <h5>Java <span class="color-heading pull-right">90%</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="91"></div>
                             </div>
@@ -136,15 +136,15 @@
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>NodeJS <span class="color-heading pull-right">67%</span></h5>
+                            <h5>NodeJS <span class="color-heading pull-right">87%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="67"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="87"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>RESTful WebServices <span class="color-heading pull-right">80%</span></h5>
+                            <h5>RESTful WebServices <span class="color-heading pull-right">85%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="80"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="85"></div>
                             </div>
                         </div>
                         <!-- End Progress Box -->
@@ -371,32 +371,32 @@
             
         <!-- Contact -->
         <div id="contact">
-            <div class="bg-color-sky-light">
+            <div class="bg-color-footer" style="background-color: #1d1d1d">
                 <div class="container content-lg">
                     <div class="row">
                         <div class="col-sm-3 sm-margin-b-30">
                             <div class="text-right sm-text-left">
-                                <h2 class="margin-b-0">Contacts</h2>
-                                <p><a href="https://drive.google.com/open?id=0B-2VjW_WtnSma2UwWDFEU2tyZFk" target="_blank">Hire me.</a></p>
+                                <h2 class="margin-b-0" style="color: #4fbb97">Contacts</h2>
+                                <p><a href="https://drive.google.com/open?id=0B-2VjW_WtnSma2UwWDFEU2tyZFk" style="color:silver" target="_blank">Hire me.</a></p>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-1">
                             <div class="row">
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
-                                    <h5><i class="icon-location-pin"></i> Location</h5>
-                                    <a href="https://www.google.co.in/maps/@12.9581056,80.2432024,16z" target="_blank">Chennai, India</a>
+                                    <h5 style="color: paleturquoise"><i class="icon-location-pin" style="color: #57caf1"></i> Location</h5>
+                                    <a href="https://www.google.co.in/maps/@12.9581056,80.2432024,16z" style="color: silver" target="_blank">Chennai, India</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
-                                    <h5><i class="icon-phone"></i> Phone</h5>
-                                    <a href="#">+91 850 823 8711</a>
+                                    <h5 style="color: #c9f97f"><i class="icon-phone" style="color: #56b556"></i> Phone</h5>
+                                    <a href="#" style="color: silver">+91 850 823 8711</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
-                                    <h5><i class="icon-envelope"></i> Email</h5>
-                                    <a href="mailto:#">saracmmce@gmail.com</a>
+                                    <h5 style="color: #f94848"><i class="icon-envelope" style="color: #de1717"></i> Email</h5>
+                                    <a href="mailto:#" style="color: silver">saracmmce@gmail.com</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
-                                    <h5><i class="icon-social-github"></i> Web</h5>
-                                    <a href="https://saravanan-cm.github.io" target="_blank">saravanan-cm.github.io</a>
+                                    <h5 style="color: #f58ec5"><i class="icon-social-github" style="color: #d41f81"></i> Web</h5>
+                                    <a href="https://saravanan-cm.github.io"  style="color: silver" target="_blank">saravanan-cm.github.io</a>
                                 </div>
                             </div>
                         </div>
