--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             
         <!-- Contact -->
         <div id="contact">
-            <div class="bg-color-sky-light" style="background-color: #1d1d1d">
+            <div style="background-color: #1d1d1d">
                 <div class="container content-lg">
                     <div class="row">
                         <div class="col-sm-3 sm-margin-b-30">
